# pyspamdetector

./: Readme.md  pyproject.toml
src/pyspamdetector/: __init__.py
